// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPanel is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiPanel props backgroundColor accent is rendered 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--accent"
/>
`;

exports[`EuiPanel props backgroundColor danger is rendered 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--danger"
/>
`;

exports[`EuiPanel props backgroundColor plain is rendered 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain"
/>
`;

exports[`EuiPanel props backgroundColor primary is rendered 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--primary"
/>
`;

exports[`EuiPanel props backgroundColor subdued is rendered 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--subdued"
/>
`;

exports[`EuiPanel props backgroundColor success is rendered 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--success"
/>
`;

exports[`EuiPanel props backgroundColor transparent is rendered 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--transparent"
/>
`;

exports[`EuiPanel props backgroundColor warning is rendered 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--warning"
/>
`;

exports[`EuiPanel props borderRadius m is rendered 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain"
/>
`;

exports[`EuiPanel props borderRadius none is rendered 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--plain"
/>
`;

exports[`EuiPanel props paddingSize l is rendered 1`] = `
<div
  class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain"
/>
`;

exports[`EuiPanel props paddingSize m is rendered 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain"
/>
`;

exports[`EuiPanel props paddingSize none is rendered 1`] = `
<div
  class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain"
/>
`;

exports[`EuiPanel props paddingSize s is rendered 1`] = `
<div
  class="euiPanel euiPanel--paddingSmall euiPanel--borderRadiusMedium euiPanel--plain"
/>
`;
